utils/ingress-main.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-main
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  # tls:
  # - hosts:
  #     - demoniv.com
  #   secretName: tls-secret
  rules:
  - host: demoniv.com
    http:
      paths:
      - path: /routea
        pathType: Prefix
        backend:
          service:
            name: hello-world-svc-a  
            port:
              number: 80
      - path: /routeb
        pathType: Prefix
        backend:
          service:
            name: hello-world-svc-b  
            port:
              number: 80
